--- a/purchase-item/index.html
+++ b/purchase-item/index.html
@@ -126,7 +126,7 @@
       <div class="col-lg-9">
 
         <div class="card mt-4">
-          <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/240024398/163FA084-9FA2-4FEB-8D91-65B556117EA7.jpeg?auto=format&fit=max&h=1000&w=1000"">
+          <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/240024398/163FA084-9FA2-4FEB-8D91-65B556117EA7.jpeg?auto=format&fit=max&h=1000&w=1000">
           <div class="card-body">
             <h3 class="card-title">Last Shot 14's</h3>
             <h4>$120.00</h4>
@@ -134,11 +134,10 @@
             </p>
             <span class="text-warning"></span>
             SOLD OUT!
-          </div>
         </div>
        <!-- ----------------------------------------------------------------- -->
        <div class="card mt-4">
-        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/239559200/0DC83EC5-0DBF-458D-A201-296DEF153942.jpeg?auto=format&fit=max&h=600&w=600"">
+        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/239559200/0DC83EC5-0DBF-458D-A201-296DEF153942.jpeg?auto=format&fit=max&h=600&w=600">
         <div class="card-body">
           <h3 class="card-title">Pantone 11 HIgh's</h3>
           <h4>$300.00</h4>
@@ -149,31 +148,163 @@
         </div>
        <!-- ----------------------------------------------------------------- -->
        <div class="card mt-4">
-        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/238100960/FF1BE55E-0B93-4A48-8C3E-887D89772DED.jpeg?auto=format&fit=max&h=600&w=600"">
+        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237887243/9158E338-2F45-4D4A-91D1-66AB5673C8FE.jpeg?auto=format&fit=max&h=600&w=600">
         <div class="card-body">
-          <h3 class="card-title">Sneaker's</h3>
-          <h4>$120.00</h4>
+          <h3 class="card-title">Alternate 4's</h3>
+          <h4>$165.00</h4>
           <p class="card-text">
           </p>
           <span class="text-warning"></span>
-          SOLD OUT!
+          <form action="/action_page.php">
+            <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
         </div>
        <!-- ----------------------------------------------------------------- -->
        <div class="card mt-4">
-        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/238100960/FF1BE55E-0B93-4A48-8C3E-887D89772DED.jpeg?auto=format&fit=max&h=600&w=600"">
+        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237887210/6004EB29-154B-4905-B5AB-A08B0961DCC1.jpeg?auto=format&fit=max&h=600&w=600">
         <div class="card-body">
-          <h3 class="card-title">Sneaker's</h3>
-          <h4>$120.00</h4>
+          <h3 class="card-title">Air Flight Hurache White, Yellow and, Purple's</h3>
+          <h4>$65.00</h4>
           <p class="card-text">
           </p>
           <span class="text-warning"></span>
-          SOLD OUT!
+          <form action="/action_page.php">
+            <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
         </div>
        <!-- ----------------------------------------------------------------- -->
-      <!-- ----------------------------------------------------------------- -->
-      <!-- ----------------------------------------------------------------- -->
-      <!-- ----------------------------------------------------------------- -->
-       <!-- /.card -->
+       <div class="card mt-4">
+        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886973/30A2F874-D213-427B-AE6A-393305F6575D.jpeg?auto=format&fit=max&h=1000&w=1000">
+        <div class="card-body">
+          <h3 class="card-title">Royalty 4's</h3>
+          <h4>$185.00</h4>
+          <p class="card-text">
+          </p>
+          <span class="text-warning"></span>
+          <form action="/action_page.php">
+            <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
+        </div>
+       <!-- ----------------------------------------------------------------- -->
+       <div class="card mt-4">
+        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886955/3BAEFA67-7D64-448F-A686-2FB24A48A258.jpeg?auto=format&fit=max&h=600&w=600">
+        <div class="card-body">
+          <h3 class="card-title">Yeezy Pirate 350 Boost V1's</h3>
+          <h4>$800.00</h4>
+          <p class="card-text">
+          </p>
+          <span class="text-warning"></span>
+          <form action="/action_page.php">
+            <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
+        </div>
+       <!-- ----------------------------------------------------------------- -->
+       <div class="card mt-4">
+        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886880/2274542D-6966-4028-9EBB-29CD6F091A37.jpeg?auto=format&fit=max&h=600&w=600">
+        <div class="card-body">
+          <h3 class="card-title">Kyrie 5 Black magic's</h3>
+          <h4>$140.00</h4>
+          <p class="card-text">
+          </p>
+          <span class="text-warning"></span>
+          <form action="/action_page.php">
+            <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
+        </div>
+       <!-- ----------------------------------------------------------------- -->
+       <div class="card mt-4">
+        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886682/781C2795-3169-467A-8687-648ABE3A8407.jpeg?auto=format&fit=max&h=600&w=600">
+        <div class="card-body">
+          <h3 class="card-title">Desert Sand 14's</h3>
+          <h4>$130.00</h4>
+          <p class="card-text">
+          </p>
+          <span class="text-warning"></span>
+          <form action="/action_page.php">
+            <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
+        </div>
+     <!-- ----------------------------------------------------------------- -->
+     <div class="card mt-4">
+      <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886649/61A935E9-753E-44D0-A1C1-11F2C8315697.jpeg?auto=format&fit=max&h=600&w=600">
+      <div class="card-body">
+        <h3 class="card-title">Cool grey 8's</h3>
+        <h4>$150.00</h4>
+        <p class="card-text">
+        </p>
+        <span class="text-warning"></span>
+        <form action="/action_page.php">
+          <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
+      </div>
+     <!-- ----------------------------------------------------------------- -->
+     <div class="card mt-4">
+      <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886598/63A3B394-A36A-48A0-9AD6-77A18265AB00.jpeg?auto=format&fit=max&h=600&w=600">
+      <div class="card-body">
+        <h3 class="card-title">Chicago 2's</h3>
+        <h4>$100.00</h4>
+        <p class="card-text">
+        </p>
+        <span class="text-warning"></span>
+        <form action="/action_page.php">
+          <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
+      </div>
+     <!-- ----------------------------------------------------------------- -->
+     <div class="card mt-4">
+      <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886556/E76856F1-EF10-4A5E-B2FE-010CE1470058.jpeg?auto=format&fit=max&h=600&w=600">
+      <div class="card-body">
+        <h3 class="card-title">Bordeaux 12's</h3>
+        <h4>$165.00</h4>
+        <p class="card-text">
+        </p>
+        <span class="text-warning"></span>
+        <form action="/action_page.php">
+          <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
+      </div>
+     <!-- ----------------------------------------------------------------- -->
+     <div class="card mt-4">
+      <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886475/8989D7FF-A81C-4EE0-92E7-0359FBA4F163.jpeg?auto=format&fit=max&h=600&w=600">
+      <div class="card-body">
+        <h3 class="card-title">Prue Money 4's</h3>
+        <h4>$140.00</h4>
+        <p class="card-text">
+        </p>
+        <span class="text-warning"></span>
+        <form action="/action_page.php">
+          <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
+      </div>
+     <!-- ----------------------------------------------------------------- -->
+     <div class="card mt-4">
+      <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886430/7A4F8CC0-F192-4D5B-BE1A-7A8CDEF17ED5.jpeg?auto=format&fit=max&h=600&w=600">
+      <div class="card-body">
+        <h3 class="card-title">NYC 10's</h3>
+        <h4>$130.00</h4>
+        <p class="card-text">
+        </p>
+        <span class="text-warning"></span>
+        <form action="/action_page.php">
+          <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
+      </div>
+     <!-- ----------------------------------------------------------------- -->
+     <div class="card mt-4">
+      <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886400/BF22CC9E-A179-4AB4-A99B-5238F3F55565.jpeg?auto=format&fit=max&h=600&w=600">
+      <div class="card-body">
+        <h3 class="card-title">Duke Kyrie 5's</h3>
+        <h4>$165.00</h4>
+        <p class="card-text">
+        </p>
+        <span class="text-warning"></span>
+        <form action="/action_page.php">
+          <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
+      </div>
+     <!-- ----------------------------------------------------------------- -->
+     <div class="card mt-4">
+      <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886310/012E4F24-6E04-4D10-BE1C-DC217865C40E.jpeg?auto=format&fit=max&h=600&w=600">
+      <div class="card-body">
+        <h3 class="card-title">Camo High 3M 1's</h3>
+        <h4>$150.00</h4>
+        <p class="card-text">
+        </p>
+        <span class="text-warning"></span>
+        <form action="/action_page.php">
+          <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
+      </div>
+     <!-- ----------------------------------------------------------------- -->
+     
+        <!-- /.card -->
 
         <div class="card card-outline-secondary my-4">
           <div class="card-header">
@@ -181,7 +312,7 @@
           </div>
           <div class="card-body">
             <hr>
-            <a href="#" class="btn btn-success">Add to cart</a>
+            <a href="#" class="btn btn-success">back to the tops</a>
           </div>
         </div>
         <!-- /.card -->
@@ -197,7 +328,16 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white"> The KickBack &copy; 2019</p>
+      <p class="m-0 text-center text-white"> The KikBack &copy; 2019</p>
+
+      <div class="social-icons">
+        <a href="https://www.instagram.com/thekikback/">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://facebook.com/thekikback">
+          <i class="fab fa-facebook"></i>
+        </a>  
+    </div>
     </div>
    
   </footer>
