--- a/index.html
+++ b/index.html
@@ -22,9 +22,21 @@
 
 <body>
 
-  <!-- NavBar begins here -->
   <center>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <p class="text-danger">
+16 North Broad St (19.62 mi)
+Middletown, Delaware 19709
+
+<a href="http://share.here.com/r/mylocation/e-eyJuYW1lIjoiVGhla2lrYmFjayIsImFkZHJlc3MiOiIxNiBOb3J0aCBCcm9hZCBTdCwgTWlkZGxldG93biwgRGVsYXdhcmUiLCJsYXRpdHVkZSI6MzkuNDUwMjgsImxvbmdpdHVkZSI6LTc1LjcxNzEsInByb3ZpZGVyTmFtZSI6ImZhY2Vib29rIiwicHJvdmlkZXJJZCI6MTg5MzgwMTUxNzUxODI5MX0=?link=addresses&amp;fb_locale=en_US&amp;ref=facebook&amp;fbclid=IwAR0Rq3h0xz14Pw7eDiv3Ri0zd1BjPBiSe9neuUcy--VpCxQ0zLL7tEkoTwU" target="_blank" rel="noopener nofollow" data-lynx-mode="asynclazy" data-lynx-uri="https://l.facebook.com/l.php?u=http%3A%2F%2Fshare.here.com%2Fr%2Fmylocation%2Fe-eyJuYW1lIjoiVGhla2lrYmFjayIsImFkZHJlc3MiOiIxNiBOb3J0aCBCcm9hZCBTdCwgTWlkZGxldG93biwgRGVsYXdhcmUiLCJsYXRpdHVkZSI6MzkuNDUwMjgsImxvbmdpdHVkZSI6LTc1LjcxNzEsInByb3ZpZGVyTmFtZSI6ImZhY2Vib29rIiwicHJvdmlkZXJJZCI6MTg5MzgwMTUxNzUxODI5MX0%3D%3Flink%3Daddresses%26fb_locale%3Den_US%26ref%3Dfacebook%26fbclid%3DIwAR0Rq3h0xz14Pw7eDiv3Ri0zd1BjPBiSe9neuUcy--VpCxQ0zLL7tEkoTwU&amp;h=AT2O0jXsfsHOHcFsoEfuN_Z5dlm49a3zk7cHhKhNrhccjk-8SPWhEjt4F6Fou6ht-Fjcqqz6sIgYBXRxPi8aQp0EVyxTk5HkrSwcmB2Hh_Y0i1unqDg-T7ESjKeGpjAgz95g">Get Directions</a>
+  </p>
+</center>
+
+  <!-- NavBar begins here -->
+  
+  <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+    <!-- Navbar content -->
+  
+
   
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -76,9 +88,9 @@
   </li>
 </ul>
 <form class="form-inline my-2 my-lg-0">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-  </form>
+  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+</form>
 </div>
 
 </nav>
@@ -88,20 +100,21 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h1 class="mt-5">A Bootstrap 4 Starter Template</h1>
-        <p class="lead">Complete with pre-defined file paths and responsive navigation!</p>
+        <h1 class="mt-5"> </h1>
+        <p class="lead"> </p>
         <ul class="list-unstyled">
-          <li>View the <i>Shopping</i> page by clicking <a href="./shop/Brand-new/page1.html">here</a>.</li>
+         
           <li>View the <i>Purchase</i> page by clicking <a href="./purchase-item/index.html">here</a>.</li>
-          <li>View the <i>About Us</i> page by clicking <a href="./about/index.html">here</a>.</li>
+          
         </ul>
       </div>
     </div>
   </div>
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.slim.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+ 
+<center>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/uVUeBOuI8Ik" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</center>
 
 </body>
 
