--- a/shop/brand-new/page1.html
+++ b/shop/brand-new/page1.html
@@ -47,7 +47,7 @@
 <body> <!-- body begins here -->
 <!-- NavBar begins here -->
 <center>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
   
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -362,7 +362,7 @@
    
         <a href="./page1.html" class="active">1</a>
         <a href="./page2.html">2</a>
-        <a href="./page3.html">3</a>
+        
 
       </div>
     </center>
