--- a/shop/used-9.10/page2.html
+++ b/shop/used-9.10/page2.html
@@ -48,7 +48,7 @@
 
   <!-- NavBar begins here -->
   <center>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
     
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
