--- a/purchase-item/index.html
+++ b/purchase-item/index.html
@@ -116,9 +116,9 @@
       <div class="col-lg-3">
         <h1 class="my-4">KIKBACK</h1>
         <div class="list-group">
-          <a href="#" class="list-group-item active">Sneakers & Trading </a>
-          <a href="#" class="list-group-item">merch</a>
-          <a href="#" class="list-group-item">Cleaning system</a>
+          <a href="#" class="list-group-item active">Size 8 </a>
+          <a href="#" class="list-group-item">Size 8.5</a>
+          <a href="#" class="list-group-item">Size 9</a>
         </div>
       </div>
       <!-- /.col-lg-3 -->
@@ -126,31 +126,31 @@
       <div class="col-lg-9">
 
         <div class="card mt-4">
-          <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/240024398/163FA084-9FA2-4FEB-8D91-65B556117EA7.jpeg?auto=format&fit=max&h=1000&w=1000">
+          <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886475/8989D7FF-A81C-4EE0-92E7-0359FBA4F163.jpeg?auto=format&fit=max&h=600&w=600">
           <div class="card-body">
-            <h3 class="card-title">Last Shot 14's</h3>
-            <h4>$120.00</h4>
+            <h3 class="card-title">Pure Money 4's</h3>
+            <h4>$140.00</h4>
             <p class="card-text">
             </p>
             <span class="text-warning"></span>
-            SOLD OUT!
+
         </div>
        <!-- ----------------------------------------------------------------- -->
        <div class="card mt-4">
-        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/239559200/0DC83EC5-0DBF-458D-A201-296DEF153942.jpeg?auto=format&fit=max&h=600&w=600">
+        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886430/7A4F8CC0-F192-4D5B-BE1A-7A8CDEF17ED5.jpeg?auto=format&fit=max&h=600&w=600">
         <div class="card-body">
-          <h3 class="card-title">Pantone 11 HIgh's</h3>
-          <h4>$300.00</h4>
+          <h3 class="card-title">NYC 10's</h3>
+          <h4>$130.00</h4>
           <p class="card-text">
           </p>
           <span class="text-warning"></span>
-          SOLD OUT!
+          
         </div>
        <!-- ----------------------------------------------------------------- -->
        <div class="card mt-4">
-        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237887243/9158E338-2F45-4D4A-91D1-66AB5673C8FE.jpeg?auto=format&fit=max&h=600&w=600">
+        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886400/BF22CC9E-A179-4AB4-A99B-5238F3F55565.jpeg?auto=format&fit=max&h=600&w=600">
         <div class="card-body">
-          <h3 class="card-title">Alternate 4's</h3>
+          <h3 class="card-title">Duke kyrie 5's</h3>
           <h4>$165.00</h4>
           <p class="card-text">
           </p>
@@ -160,10 +160,10 @@
         </div>
        <!-- ----------------------------------------------------------------- -->
        <div class="card mt-4">
-        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237887210/6004EB29-154B-4905-B5AB-A08B0961DCC1.jpeg?auto=format&fit=max&h=600&w=600">
+        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886310/012E4F24-6E04-4D10-BE1C-DC217865C40E.jpeg?auto=format&fit=max&h=600&w=600">
         <div class="card-body">
-          <h3 class="card-title">Air Flight Hurache White, Yellow and, Purple's</h3>
-          <h4>$65.00</h4>
+          <h3 class="card-title">Camo High 3M 1's</h3>
+          <h4>$150.00</h4>
           <p class="card-text">
           </p>
           <span class="text-warning"></span>
@@ -172,10 +172,10 @@
         </div>
        <!-- ----------------------------------------------------------------- -->
        <div class="card mt-4">
-        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886973/30A2F874-D213-427B-AE6A-393305F6575D.jpeg?auto=format&fit=max&h=1000&w=1000">
+        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/224029006/5581EFB6-1934-4BFF-985A-CCC8FD9AC1F2.jpeg?auto=format&fit=max&h=600&w=600">
         <div class="card-body">
-          <h3 class="card-title">Royalty 4's</h3>
-          <h4>$185.00</h4>
+          <h3 class="card-title">Deep Royal Blue 12's</h3>
+          <h4>$250.00</h4>
           <p class="card-text">
           </p>
           <span class="text-warning"></span>
@@ -183,127 +183,7 @@
             <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
         </div>
        <!-- ----------------------------------------------------------------- -->
-       <div class="card mt-4">
-        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886955/3BAEFA67-7D64-448F-A686-2FB24A48A258.jpeg?auto=format&fit=max&h=600&w=600">
-        <div class="card-body">
-          <h3 class="card-title">Yeezy Pirate 350 Boost V1's</h3>
-          <h4>$800.00</h4>
-          <p class="card-text">
-          </p>
-          <span class="text-warning"></span>
-          <form action="/action_page.php">
-            <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
-        </div>
-       <!-- ----------------------------------------------------------------- -->
-       <div class="card mt-4">
-        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886880/2274542D-6966-4028-9EBB-29CD6F091A37.jpeg?auto=format&fit=max&h=600&w=600">
-        <div class="card-body">
-          <h3 class="card-title">Kyrie 5 Black magic's</h3>
-          <h4>$140.00</h4>
-          <p class="card-text">
-          </p>
-          <span class="text-warning"></span>
-          <form action="/action_page.php">
-            <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
-        </div>
-       <!-- ----------------------------------------------------------------- -->
-       <div class="card mt-4">
-        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886682/781C2795-3169-467A-8687-648ABE3A8407.jpeg?auto=format&fit=max&h=600&w=600">
-        <div class="card-body">
-          <h3 class="card-title">Desert Sand 14's</h3>
-          <h4>$130.00</h4>
-          <p class="card-text">
-          </p>
-          <span class="text-warning"></span>
-          <form action="/action_page.php">
-            <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
-        </div>
-     <!-- ----------------------------------------------------------------- -->
-     <div class="card mt-4">
-      <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886649/61A935E9-753E-44D0-A1C1-11F2C8315697.jpeg?auto=format&fit=max&h=600&w=600">
-      <div class="card-body">
-        <h3 class="card-title">Cool grey 8's</h3>
-        <h4>$150.00</h4>
-        <p class="card-text">
-        </p>
-        <span class="text-warning"></span>
-        <form action="/action_page.php">
-          <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
-      </div>
-     <!-- ----------------------------------------------------------------- -->
-     <div class="card mt-4">
-      <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886598/63A3B394-A36A-48A0-9AD6-77A18265AB00.jpeg?auto=format&fit=max&h=600&w=600">
-      <div class="card-body">
-        <h3 class="card-title">Chicago 2's</h3>
-        <h4>$100.00</h4>
-        <p class="card-text">
-        </p>
-        <span class="text-warning"></span>
-        <form action="/action_page.php">
-          <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
-      </div>
-     <!-- ----------------------------------------------------------------- -->
-     <div class="card mt-4">
-      <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886556/E76856F1-EF10-4A5E-B2FE-010CE1470058.jpeg?auto=format&fit=max&h=600&w=600">
-      <div class="card-body">
-        <h3 class="card-title">Bordeaux 12's</h3>
-        <h4>$165.00</h4>
-        <p class="card-text">
-        </p>
-        <span class="text-warning"></span>
-        <form action="/action_page.php">
-          <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
-      </div>
-     <!-- ----------------------------------------------------------------- -->
-     <div class="card mt-4">
-      <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886475/8989D7FF-A81C-4EE0-92E7-0359FBA4F163.jpeg?auto=format&fit=max&h=600&w=600">
-      <div class="card-body">
-        <h3 class="card-title">Prue Money 4's</h3>
-        <h4>$140.00</h4>
-        <p class="card-text">
-        </p>
-        <span class="text-warning"></span>
-        <form action="/action_page.php">
-          <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
-      </div>
-     <!-- ----------------------------------------------------------------- -->
-     <div class="card mt-4">
-      <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886430/7A4F8CC0-F192-4D5B-BE1A-7A8CDEF17ED5.jpeg?auto=format&fit=max&h=600&w=600">
-      <div class="card-body">
-        <h3 class="card-title">NYC 10's</h3>
-        <h4>$130.00</h4>
-        <p class="card-text">
-        </p>
-        <span class="text-warning"></span>
-        <form action="/action_page.php">
-          <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
-      </div>
-     <!-- ----------------------------------------------------------------- -->
-     <div class="card mt-4">
-      <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886400/BF22CC9E-A179-4AB4-A99B-5238F3F55565.jpeg?auto=format&fit=max&h=600&w=600">
-      <div class="card-body">
-        <h3 class="card-title">Duke Kyrie 5's</h3>
-        <h4>$165.00</h4>
-        <p class="card-text">
-        </p>
-        <span class="text-warning"></span>
-        <form action="/action_page.php">
-          <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
-      </div>
-     <!-- ----------------------------------------------------------------- -->
-     <div class="card mt-4">
-      <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886310/012E4F24-6E04-4D10-BE1C-DC217865C40E.jpeg?auto=format&fit=max&h=600&w=600">
-      <div class="card-body">
-        <h3 class="card-title">Camo High 3M 1's</h3>
-        <h4>$150.00</h4>
-        <p class="card-text">
-        </p>
-        <span class="text-warning"></span>
-        <form action="/action_page.php">
-          <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
-      </div>
-     <!-- ----------------------------------------------------------------- -->
-     
+
         <!-- /.card -->
 
         <div class="card card-outline-secondary my-4">
@@ -352,5 +232,4 @@
 <!-- ----------------------------------------------------------------- -->
 </body> <!--style starts here --> 
 
-<style>
-  
+</style>
