--- a/shop/used-9.10/page2.html
+++ b/shop/used-9.10/page2.html
@@ -18,12 +18,15 @@
 
   <!-- Custom styles for this template -->
   <link href="css/shop-homepage.css" rel="stylesheet">
+  <link href="css/page2-style.css" rel="stylesheet">
 
 </head> <!-- header ends here -->
 <!-- ----------------------------------------------------------------- -->
 <!-- ----------------------------------------------------------------- -->
 <!-- ----------------------------------------------------------------- -->
 
+<body>
+
 
 
 
@@ -44,8 +47,7 @@
 <!-- ----------------------------------------------------------------- -->
 <!-- ----------------------------------------------------------------- -->
 <!-- ----------------------------------------------------------------- -->
-<body> <!-- body begins here -->
-
+<body>
   <!-- NavBar begins here -->
   <center>
     <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
