--- a/shop/used-9.10/page1.html
+++ b/shop/used-9.10/page1.html
@@ -155,16 +155,17 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/239559200/0DC83EC5-0DBF-458D-A201-296DEF153942.jpeg?auto=format&fit=max&h=600&w=600" alt=""></a>
+              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/242456024/C4674236-0C7B-444A-A277-C1F761FF85E6.jpeg?auto=format&fit=max&h=1000&w=1000" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Pantone 11 HIgh's</a>
+                  <a href="#">Vapormax Plus Obsidian’s</a>
                 </h4>
-                <h5>$300.00 </h5>
-                <p class="card-text">Pantone 11 High 
-                  Size 10 with original box 
-                  Shoes are 9/10 Condition 
-                  Shoes will be shipped double boxed with tracking
+                <h5>$140.00
+                  </h5>
+                <p class="card-text">Vapormax Plus Obsidian 
+                    Size 10 with no box 
+                    Shoes are 9/10 Condition 
+                    Shoes will be shipped double boxed with tracking
                 </p>
             </div>
 
