--- a/shop/used-9.10/page1.html
+++ b/shop/used-9.10/page1.html
@@ -12,12 +12,13 @@
   <meta name="author" content="">
 
   <title>Shop Homepage - Start Bootstrap Template</title>
+  
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
-  <!-- Custom styles for this template -->
-  <link href="css/shop-homepage.css" rel="stylesheet">
+  <link href="css/page1-style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 
 </head> <!-- header ends here -->
 <!-- ----------------------------------------------------------------- -->
