--- a/shop/used-9.10/page2.html
+++ b/shop/used-9.10/page2.html
@@ -12,11 +12,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+  <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.css" >
 
   <!-- Custom styles for this template -->
-  <link href="css/shop-homepage.css" rel="stylesheet">
-  <link href="css/page2-style.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/page2-style.css">
 
 </head>
 <!-- header ends here -->
