--- a/shop/used-9.10/page3.html
+++ b/shop/used-9.10/page3.html
@@ -14,10 +14,11 @@
   <title>Shop Homepage - Start Bootstrap Template</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+  <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.css" >
 
   <!-- Custom styles for this template -->
-  <link href="css/shop-homepage.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/page3-style.css">
 
 </head> <!-- header ends here -->
 <!-- ----------------------------------------------------------------- -->
@@ -129,19 +130,19 @@
 
         <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
           <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <!-- <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li> -->
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <img class="d-block img-fluid" src="./img/placeholder-900x350.png" alt="First slide">
+              <!-- <img class="d-block img-fluid" src="./img/placeholder-900x350.png" alt="First slide">
             </div>
             <div class="carousel-item">
               <img class="d-block img-fluid" src="./img/placeholder-900x350.png" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid" src="./img/placeholder-900x350.png" alt="Third slide">
+              <img class="d-block img-fluid" src="./img/placeholder-900x350.png" alt="Third slide"> -->
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -158,13 +159,18 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="./img/placeholder-700x400.png" alt=""></a>
+              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/229358942/BA8E97EB-FACA-43FC-B24B-A6F941619413.jpeg?auto=format&fit=max&h=1000&w=1000" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item One</a>
+                  <a href="#">Kd 7 35,000 Degree's</a>
                 </h4>
-                <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <h5>$90.00</h5>
+                <p class="card-text">Kd 7 35,000 Degree's 
+                  Size 10 with original box 
+                  Shoes are in 9/10 condition 
+                  Shoes will be shipped double boxed with tracking
+                  
+                  </p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -174,13 +180,16 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="./img/placeholder-700x400.png" alt=""></a>
+              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/226864547/D20C9ECA-9709-4CF6-8630-99487922440B.jpeg?auto=format&fit=max&h=1000&w=1000" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Two</a>
+                  <a href="#">Knicks Uptempo's</a>
                 </h4>
-                <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
+                <h5>$180.00</h5>
+                <p class="card-text">Knicks Uptempo 
+                  Size 9.5 with original box 
+                  Shoes are in 9/10 condition 
+                  Shoes will be shipped double boxed with tracking</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -190,13 +199,16 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="./img/placeholder-700x400.png" alt=""></a>
+              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/224029066/F461E60A-716E-4257-B098-C81F4C486528.jpeg?auto=format&fit=max&h=1000&w=1000" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Three</a>
+                  <a href="#">Camo 5's</a>
                 </h4>
-                <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <h5>$130.00</h5>
+                <p class="card-text">Camo 5 
+                  Size 13 with original box 
+                  Shoes are in 9/10 condition 
+                  Shoes will be shipped double boxed with tracking</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -206,13 +218,16 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="./img/placeholder-700x400.png" alt=""></a>
+              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/222379321/product_image.jpg?auto=format&fit=max&h=600&w=600" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Four</a>
+                  <a href="#">Gamma 11's</a>
                 </h4>
-                <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <h5>$300.00</h5>
+                <p class="card-text">Gamma 11 High 
+                  Size 10 with original box 
+                  Shoes are in 9/10 condition 
+                  Shoes will be shipped double boxed with tracking</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -222,13 +237,16 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="./img/placeholder-700x400.png" alt=""></a>
+              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/220978912/product_image.jpg?auto=format&fit=max&h=1000&w=1000" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Five</a>
+                  <a href="#">White Gatorade 6's</a>
                 </h4>
-                <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
+                <h5>$125.00</h5>
+                <p class="card-text">White Gatorade 6 
+                  Size 8.5 with original box 
+                  Shoes condition varies by size 
+                  Shoes will be shipped double boxed with tracking</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -238,13 +256,16 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="./img/placeholder-700x400.png" alt=""></a>
+              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/210968791/product_image.jpg?auto=format&fit=max&h=1000&w=1000" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Six</a>
+                  <a href="#">Teal 4's</a>
                 </h4>
-                <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <h5>$65.00</h5>
+                <p class="card-text">Teal 4 
+                  Size 5.5y with original all 
+                  Shoes condition varies by size 
+                  Shoes will be shipped double boxed with tracking</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
