--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   </head>
- <!-- s=Social Icons End -->
+ <!-- Social Icons End -->
+
 
 </head> <!-- header ends here -->
 <!-- ----------------------------------------------------------------- -->
@@ -47,6 +48,12 @@
 
   <center>
   <img src="https://assets.bigcartel.com/theme_images/33480736/THEKIKBACK_LOGO.jpg?auto=format&fit=max&h=250&w=1300">
+
+  <div><a href="http://share.here.com/r/mylocation/e-eyJuYW1lIjoiVGhla2lrYmFjayIsImFkZHJlc3MiOiIxNiBOb3J0aCBCcm9hZCBTdCwgTWlkZGxldG93biwgRGVsYXdhcmUiLCJsYXRpdHVkZSI6MzkuNDUwMjgsImxvbmdpdHVkZSI6LTc1LjcxNzEsInByb3ZpZGVyTmFtZSI6ImZhY2Vib29rIiwicHJvdmlkZXJJZCI6MTg5MzgwMTUxNzUxODI5MX0=?link=addresses&amp;fb_locale=en_US&amp;ref=facebook&amp;fbclid=IwAR1sFWRZsavZVpPE1l4ir1lQyd6orQ5PPExMC7PqbXW6TFkZfoE1jgCWiRs"
+     target="_blank" rel="noopener nofollow" 
+     data-lynx-mode="asynclazy" 
+     data-lynx-uri="https://l.facebook.com/l.php?u=http%3A%2F%2Fshare.here.com%2Fr%2Fmylocation%2Fe-eyJuYW1lIjoiVGhla2lrYmFjayIsImFkZHJlc3MiOiIxNiBOb3J0aCBCcm9hZCBTdCwgTWlkZGxldG93biwgRGVsYXdhcmUiLCJsYXRpdHVkZSI6MzkuNDUwMjgsImxvbmdpdHVkZSI6LTc1LjcxNzEsInByb3ZpZGVyTmFtZSI6ImZhY2Vib29rIiwicHJvdmlkZXJJZCI6MTg5MzgwMTUxNzUxODI5MX0%3D%3Flink%3Daddresses%26fb_locale%3Den_US%26ref%3Dfacebook%26fbclid%3DIwAR1sFWRZsavZVpPE1l4ir1lQyd6orQ5PPExMC7PqbXW6TFkZfoE1jgCWiRs&amp;h=AT2AtnsL4GMP2ENA9rXpRgo7EAL4IaDQHujmpSn3eUCnbdkhC5nKkTIo51dRhr3_d13lt73SAHE5yArBiAFPTFvWB92lBC5tEANZdfjDq5x9MZExLBdlJM5KLt5leYaM132e">Get Directions</a></div>
+
 </center>
 
 
@@ -55,14 +62,10 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-  
-    <a class="nav-link" href="../../index.html">Home <span class="sr-only">(current)</span></a>
-
-  
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="../../index.html">Home <span class="sr-only">(current)</span></a>
         </li>
 
         <!-- DropDown NavBar 1 Begins Here  -->
@@ -72,10 +75,10 @@
 
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-        <a class="dropdown-item" href="../Brand-new/page1.html">Brand New</a>
-        <a class="dropdown-item" href="../used-9.10/page1.html">Used (9/10 Condition)</a>
-        <a class="dropdown-item" href="../used-8.10/page1.hmtl">Used (8/10 Condition)</a>
-        <a class="dropdown-item" href="../kickback-steals/page1.html">KickBack Steals</a>
+        <a class="dropdown-item" href="./shop/Brand-new/page1.html">Brand New</a>
+        <a class="dropdown-item" href="./shop/used-9.10/page1.html">Used (9/10 Condition)</a>
+        <a class="dropdown-item" href="./shop/used-8.10/page1.hmtl">Used (8/10 Condition)</a>
+        <a class="dropdown-item" href="./shop/kickback-steals/page1.html">KickBack Steals</a>
       </div>
 <!-- Dropdown NavBar 1 Ends Here -->
 
@@ -129,7 +132,7 @@
   
    
   <center>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/uVUeBOuI8Ik" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="1000" height="1000" src="https://www.youtube.com/embed/uVUeBOuI8Ik" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </center>
   
   </body><!-- body ends here -->
