--- a/shop/used-9.10/page1.html
+++ b/shop/used-9.10/page1.html
@@ -47,7 +47,7 @@
 <!-- ----------------------------------------------------------------- -->
 <body> <!-- body begins here -->
   <body style="background-image:url('https://images.wallpaperscraft.com/image/black_background_red_color_paint_explosion_burst_9844_1920x1080.jpg');">
-
+    <div class="header">
     <center>
       <img src="https://assets.bigcartel.com/theme_images/33480736/THEKIKBACK_LOGO.jpg?auto=format&fit=max&h=250&w=1300">
   
@@ -110,7 +110,7 @@
     </div>
   </nav>
 
-
+  </div
   <!-- Page Content -->
   <div class="container">
 
