--- a/shop/used-9.10/page3.html
+++ b/shop/used-9.10/page3.html
@@ -129,7 +129,8 @@
           </form>
         </div>
     </nav> <!--NavBar Ends here-->
-  </div> <!-- header ends here -->
+  </div>     
+  
     <!-- ================================================================== -->
     <!-- ================================================================== -->
     <!-- ================================================================== -->    
